# turtlebot3_xacro

./: CMakeLists.txt  README.md  package.xml
bringup/: bringup.sh  setup_boot_bringup.sh
config/: ekf.yaml  model.rviz
hooks/: resource_paths.dsv.in
launch/: bringup_launch.py  cam_launch.py  description_launch.py  manual_launch.py  upload_launch.py
scripts/: bringup.sh  cmd_vel_scale.py  create_udev_rules  odometry.py
urdf/: common_properties.xacro  turtlebot3_burger.urdf.xacro  turtlebot3_gazebo.xacro  turtlebot3_waffle_pi.urdf.xacro
