<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot3_xacro</name>
  <version>2.1.2</version>
  <description>
    Xacro syntax for Turtlebot3 models, plus some bringup scripts
  </description>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <maintainer email="olivier.kermorgant@ec-nantes.fr">Olivier Kermorgant</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3/issues</url>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="pyo@robotis.com">Pyo</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>simple_launch</exec_depend>
  <exec_depend>nav2_common</exec_depend>
  <exec_depend>hls_lfcd_lds_driver</exec_depend>
  <exec_depend>turtlebot3_node</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
